--- a/style.css
+++ b/style.css
@@ -34,11 +34,12 @@ body {
 #answer {
     background-color: #c8b6ff;
     color: #495069;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     border-width: 5px;
     border-color: #000;
     position: relative;
     height: 4rem;
+    width: auto;
     border-radius: 1rem;
     margin-bottom: 1rem;
     display: flex;
@@ -50,6 +51,7 @@ body {
 }
 
 #calc-buttons {
+    border-radius: 1rem;
     display: flex;
     flex-wrap: wrap;
     gap: 0.6rem;
@@ -64,5 +66,28 @@ input {
     height: 4rem;
     float: left;
     font-size: 20px;
+    box-shadow: 0 4px rgba(0,0,0,0.2);
+}
+
+#inputNum {
+    width: 100%;
+    text-align: right;
+    background-color: #c8b6ff;
+    color: #495069;
+}
+
+#clear{
+    width: calc((25rem/4)*3 - 2rem);
+}
+#zero{
+    width: calc((25rem/2) - 1.5rem);
+}
+#displayOp{
+    height: 3rem;
+    width: 3em;
+    line-height: 3rem;
+    background-color: #e4d9ff;
+    margin-left: 1rem;
+    border-radius: 1rem;
     box-shadow: 0 4px rgba(0,0,0,0.2);
 }
