--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 :root {
     --bg-color: #4f518c;
     --calc-color: #e4d9ff;
+    --ans-area-color: #c8b6ff;
+    --calc-text-color: #495069;
     --gray: #212121;
+    --box-shadow: rgba(0,0,0,0.2);
 }
 
 * {
@@ -23,17 +26,19 @@ body {
     padding: 1rem;
     height: auto;
     width: 25rem;
+    /* width: auto; */
+
     text-align: center;
     border-radius: 1rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    box-shadow: 0 4px rgba(0,0,0,0.2);
+    box-shadow: 0 4px var(--box-shadow);
 }
 
 #answer {
-    background-color: #c8b6ff;
-    color: #495069;
+    background-color: var(--ans-area-color);
+    color: var(--calc-text-color);
     padding: 1rem 0.5rem;
     border-width: 5px;
     border-color: #000;
@@ -46,48 +51,134 @@ body {
     align-items: center;
     justify-content: right;
     font-size: 20px;
-    box-shadow: 0 4px rgba(0,0,0,0.2);
+    box-shadow: 0 4px var(--box-shadow);
     overflow: hidden;
 }
+
+    input {
+        outline: 0;
+        position: relative;
+        border: 0;
+        color: var(--calc-text-color);
+        width: calc((25rem/4) - 1rem);
+        height: 4rem;
+        float: left;
+        font-size: 20px;
+        box-shadow: 0 4px var(--box-shadow);
+    }
+
+    #inputNum {
+        width: 100%;
+        text-align: right;
+        background-color: var(--ans-area-color);
+        color: var(--calc-text-color);
+    }
+
+
+    #displayOp {
+        height: 3rem;
+        width: 3em;
+        margin-left: 1rem;
+        line-height: 3rem;
+        background-color: var(--calc-color);
+        /* border: solid;
+        border-color: var(--box-shadow);
+        border-width: 0.1rem; */
+        border-radius: 1rem;
+        box-shadow: 0 4px var(--box-shadow);
+    }
 
 #calc-buttons {
     border-radius: 1rem;
     display: flex;
     flex-wrap: wrap;
-    gap: 0.6rem;
+    gap: 0.5rem;
     justify-content: center;
 }
-input {
-    outline: 0;
-    position: relative;
-    border: 0;
-    color: #495069;
-    width: calc((25rem/4) - 1rem);
-    height: 4rem;
-    float: left;
-    font-size: 20px;
-    box-shadow: 0 4px rgba(0,0,0,0.2);
+
+    input[type=button] {
+        border-color: var(--bg-color);
+        border-radius: 0.5rem;
+        background-color: #e9e9ed;
+        /* border: solid;
+        border-color: #d0d0d6;
+        border-width: 0.1rem; */
+        
+    }
+    input[type=button]:hover {
+        background-color: #d0d0d6;
+    }
+
+    #clear {
+        width: calc((25rem/4)*3 - 2rem);
+    }
+
+    #zero {
+        width: calc((25rem/2) - 1.5rem);
+    }
+
+@media (max-width: 800px){
+    body{
+        /* background-color: blue; */
+        height: 100vh;
+    }
+    .calculator{
+        margin: 4rem auto;
+        width: 90%;
+        height: auto;
+    }
+    #calc-buttons {
+        gap: 0.5rem;
+    }
+    input{
+        width: calc(25% - 0.5rem);
+    }
+    input[type=button] {
+        border: solid;
+        border-color: #d0d0d6;
+        border-width: 0.2rem;
+    }
+    #clear {
+        width: calc(75% - 0.5rem)
+    }
+
+    #zero {
+        width: calc(50% - 0.5rem)
+    }
 }
 
-#inputNum {
-    width: 100%;
-    text-align: right;
-    background-color: #c8b6ff;
-    color: #495069;
-}
-
-#clear{
-    width: calc((25rem/4)*3 - 2rem);
-}
-#zero{
-    width: calc((25rem/2) - 1.5rem);
-}
-#displayOp{
-    height: 3rem;
-    width: 3em;
-    line-height: 3rem;
-    background-color: #e4d9ff;
-    margin-left: 1rem;
-    border-radius: 1rem;
-    box-shadow: 0 4px rgba(0,0,0,0.2);
+@media (max-height: 500px){
+    body{
+        /* background-color: green; */
+        height: 100vh;
+        width: 90vw;
+        display: flex;
+        justify-content: center;
+    }
+    .calculator {
+        margin: 0.5rem auto;
+        height: calc(95vh - 1rem);
+        width: auto;
+        flex-direction: row;
+    }
+    input{
+        width: 10%;
+        height: 10%;
+    }
+    #answer {
+        width: 100%;
+        height: 90;
+    }
+    #inputNum{
+        height: 100%;
+    }
+    #calc-buttons {
+        width: 100%;
+        height: 75%;
+        gap: 0.5rem;
+    }
+    input[type=button] {
+        height: 2rem;
+        width: 23%;
+    }
 }
